# TO_MPC

./: .gitignore  compare_high_solvers.py  plot_mpc_actual.py  plot_mpc_horizon.py  plot_mpc_joint1.py  read_me.txt  solver_horizon_to_high.csv  solver_horizon_to_high1.csv  solver_perf_high.csv  solver_perf_to_high.csv  solver_perf_to_high1.csv  solver_stats.csv  solver_stats_high.csv  solver_stats_to_high.csv  solver_stats_to_high1.csv
install/: local_setup.sh  setup.sh
log/: latest_build
result_mppi/: mppi_perf0.csv  mppi_perf_old.csv  mppi_rh_perf0.csv  mppi_rh_stats0.csv  mppi_robot_perf0.csv  mppi_robot_perf_first.csv  mppi_robot_stats_first.csv  mppi_stats0.csv  mppi_stats_old.csv  plot_mppi_results.py  plot_mppi_robot.py
solvers/: acados_ocp.json  copy_high_mpc_accleerations.ipynb  disc_high_mpc_accel.ipynb  disc_low_mpc_accel.ipynb  extract_only_relevant.py  high_disc_human_accel.ipynb  high_mpc_accleerations.ipynb  low_disc_human_accel.ipynb  low_mpc_accleerations.ipynb  to_disc_high_mpc_accel.ipynb  to_disc_low_mpc_accel.ipynb  to_expl_high_mpc_accleerations.ipynb  to_human_disc_high_mpc_accel.ipynb  to_human_disc_low_mpc_accel.ipynb  toc_mpc_slack_acceleration-2.0.ipynb
solvers/.ipynb_checkpoints/: copy_to_high_mpc_accleerations-checkpoint.ipynb  high_mpc_accleerations-checkpoint.ipynb  low_mpc_accleerations-checkpoint.ipynb  to_disc_high_mpc_accel-checkpoint.ipynb  to_expl_high_mpc_accleerations-checkpoint.ipynb  to_high_mpc_accleerations-checkpoint.ipynb  toc_mpc_slack_acceleration-2.0-checkpoint.ipynb
solvers/c_generated_code/: Makefile  acados_sim_solver_UR5.h  acados_solver_UR5.h  main_sim_UR5.c
solvers/c_generated_code1/: Makefile  acados_sim_solver_UR5.c  acados_sim_solver_UR5.h  acados_solver.pxd  acados_solver_UR5.c  main_sim_UR5.c
solvers/c_generated_code2/: acados_sim_solver_UR5.c  acados_solver_UR5.c  acados_solver_UR5.h  main_UR5.c
solvers/c_generated_code_low/: acados_sim_solver_UR5.c  main_UR5  main_sim_UR5  main_sim_UR5.c
solvers/c_generated_code_old/: main_UR5.c
solvers/c_generated_code_to_high_disc/: Makefile  main_UR5  main_sim_UR5.c
solvers/solver_high_disc/: acados_solver_UR5.h
solvers/solver_low/: acados_solver_UR5.c  acados_solver_UR5.h
solvers/solver_old2/: acados_sim_solver_UR5.h  acados_solver_UR5.c
solvers/solver_old_to/: acados_sim_solver_UR5.c
solvers/solver_to_high/: acados_sim_solver_UR5.c  acados_solver_UR5.c  acados_solver_UR5.h
solvers/solver_to_high_disc/: acados_sim_solver_UR5.h  acados_solver_UR5.c  acados_solver_UR5.h
solvers/solver_working_to_high_disc/: acados_solver_UR5.c  acados_solver_UR5.h
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/mpc_high/: CMakeLists.txt  package.xml
src/mpc_high_to/: CMakeLists.txt  high_solver.cpp  high_solver_!.cpp  package.xml
src/mpc_low/: CMakeLists.txt  package.xml
src/mpc_low/include/: acados_solver_holder.hpp
src/mpc_low/include/blasfeo/include/: blasfeo_target.h
src/mpc_low/solver_low/: acados_solver_holder.cpp
src/mpc_low/solver_low/UR5_model/: UR5_expl_vde_forw.c
src/mpc_low/solver_low_disc/: acados_solver_UR5.c  acados_solver_UR5.h  acados_solver_holder.cpp
src/mpc_low/solver_low_disc/UR5_model/: UR5_dyn_disc_phi_fun.c  UR5_dyn_disc_phi_fun_jac.c  UR5_dyn_disc_phi_fun_jac_hess.c
src/mpc_low/solver_low_disc_h/: acados_solver_UR5.c  acados_solver_UR5.h  acados_solver_holder.cpp
src/mpc_low/solver_low_disc_h/UR5_model/: UR5_dyn_disc_phi_fun.c  UR5_dyn_disc_phi_fun_jac.c  UR5_dyn_disc_phi_fun_jac_hess.c
src/mpc_low/src/: low_solver (copy).cpp  low_solver.cpp  low_solver1.cpp  low_solver1_base.cpp
src/mpc_to/: CMakeLists.txt  acados_solver_holder.cpp  acados_solver_holder_new.cpp
src/mpc_to/include/: acados_solver_holder.hpp
src/mpc_to/solver_disc_old/: acados_sim_solver_UR5.c  acados_solver_holder.cpp
src/mpc_to/solver_disc_old/UR5_cost/: UR5_cost_ext_cost_e_fun_jac.c
src/mpc_to/solver_disc_old/UR5_model/: UR5_expl_ode_hess.c  UR5_model.h
src/mpc_to/solver_to_high/: acados_solver_UR5.c  acados_solver_UR5.h
src/mpc_to/solver_to_high/UR5_constraints/: UR5_constr_h_fun_jac_uxt_zt_hess.c
src/mpc_to/solver_to_high/UR5_cost/: UR5_cost_ext_cost_fun.c
src/mpc_to/solver_to_high/UR5_model/: UR5_expl_ode_hess.c
src/mpc_to/solver_to_high_disc/: acados_solver_UR5.c  acados_solver_UR5.h  acados_solver_holder.cpp
src/mpc_to/solver_to_high_disc/UR5_constraints/: UR5_constr_h_0_fun.c  UR5_constr_h_0_fun_jac_uxt_zt_hess.c  UR5_constr_h_fun.c
src/mpc_to/solver_to_high_disc/UR5_model/: UR5_dyn_disc_phi_fun.c  UR5_dyn_disc_phi_fun_jac.c  UR5_dyn_disc_phi_fun_jac_hess.c
src/mpc_to/solver_to_high_disc_noh/: acados_solver_UR5.c  acados_solver_UR5.h  acados_solver_holder.cpp
src/mpc_to/solver_to_high_disc_noh/UR5_constraints/: UR5_constr_h_0_fun.c  UR5_constr_h_0_fun_jac_uxt_zt.c  UR5_constr_h_0_fun_jac_uxt_zt_hess.c  UR5_constr_h_fun.c  UR5_constr_h_fun_jac_uxt_zt_hess.c  UR5_constraints.h
src/mpc_to/solver_to_high_disc_noh/UR5_cost/: UR5_cost_ext_cost_e_fun.c  UR5_cost_ext_cost_fun.c
src/mpc_to/solver_to_high_disc_noh/UR5_model/: UR5_dyn_disc_phi_fun.c  UR5_dyn_disc_phi_fun_jac.c  UR5_dyn_disc_phi_fun_jac_hess.c
src/mpc_to/src/: high_solver.cpp  high_solver1.cpp  kinematics_functions.cpp
src/mpc_to_low/: CMakeLists.txt  package.xml
src/mppi_controller/: setup.py
src/pb_ur5_sim/: setup.cfg  setup.py
src/sim_utils/: package.xml  setup.py
src/ur_ros2_driver/: Readme.txt
ur5_urdf/: full_UR5.urdf  ros_u5_node.py
(+224 files in other folders)
